<resources>
    <string name="app_name" translatable="false">WeSwap</string>
    <string name="hello">Hello World!</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Full Name</string>
    <string name="register">Register</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="new_user">New User?  Register Here</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="desc">Description</string>
    <string name="condition">Condition</string>
    <string name="type">Type</string>
    <string name="brand">Brand</string>
    <string name="warranty">Warranty</string>
    <string name="operator">Operator</string>
    <string name="gender">Gender</string>
    <string name="location">Ad Location</string>
    <string name="submit">Submit</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_my_ads">My Ads</string>
    <string name="menu_favorites">favorites</string>
    <string name="srch">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_ad">New Ad</string>
    <string name="white_space">  </string>
    <string name="save">Save</string>
    <string name="swap_category">Swap with</string>
</resources>
