<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.atta.weswap.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_subCategoriesFragment"
            app:destination="@id/subCategoriesFragment" />
        <action
            android:id="@+id/action_nav_home_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_nav_home_to_newAdFragment"
            app:destination="@id/newAdFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.atta.weswap.ui.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.atta.weswap.ui.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_my_ads"
        android:name="com.atta.weswap.ui.MyAdsFragment"
        android:label="@string/menu_my_ads"
        tools:layout="@layout/fragment_my_ads" />
    <fragment
        android:id="@+id/subCategoriesFragment"
        android:name="com.atta.weswap.ui.SubcategoriesFragment"
        android:label="Subcategories"
        tools:layout="@layout/fragment_subcategories">
        <argument
            android:name="catId"
            app:argType="integer" />
        <action
            android:id="@+id/action_subCategoriesFragment_to_adsFragment"
            app:destination="@id/adsFragment" />
        <action
            android:id="@+id/action_subCategoriesFragment_to_newAdFragment"
            app:destination="@id/newAdFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.atta.weswap.ui.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search" >
        <argument
            android:name="searchText"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/adsFragment"
        android:name="com.atta.weswap.ui.AdsFragment"
        android:label="Ads">
        <argument
            android:name="subcatId"
            app:argType="integer" />
        <action
            android:id="@+id/action_adsFragment_to_adDetaildFragment"
            app:destination="@id/adDetaildFragment" />
    </fragment>
    <fragment
        android:id="@+id/adDetaildFragment"
        android:name="com.atta.weswap.ui.AdDetailsFragment"
        android:label="Ad Details"
        tools:layout="@layout/fragment_ad_details">
        <argument
            android:name="ad"
            app:argType="com.atta.weswap.model.Ad" />
    </fragment>
    <fragment
        android:id="@+id/newAdFragment"
        android:name="com.atta.weswap.ui.NewAdFragment"
        android:label="New Ad" />
</navigation>